5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1596_1014.log
== TEST (2019-03-26 19:00:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lucro=30%
bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- ERROR:
File "XXXX", line 4
    lucro=30%
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:01:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lucro=30%
bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- EXECUTION TIME:
0.167195
-- ERROR:
  File "/home/codebench/codes/1596/1014/main.py", line 4
    lucro=30%
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:01:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dinheiro=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:01:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- EXECUTION TIME:
0.134536
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 6, in <module>
    dinheiro=(float(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:01:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dinheiro=(float(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:02:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lucro=30%x
bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- EXECUTION TIME:
0.211146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 4, in <module>
    lucro=30%x
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:02:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lucro=30%x
bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro=30%x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:02:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
lucro=30%
bilichilde=(float(input("total de vendas")))
dinheiro=(float(input("lucro")))
print(round(lucro,2))
-- ERROR:
File "XXXX", line 4
    lucro=30%
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:07:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas=(float(input("total de vendas")))
lucro=total_vendas*(0,3)
print(lucro)
-- EXECUTION TIME:
0.195652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    lucro=total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas=(float(input("total de vendas")))
lucro=total_vendas*(0,3)
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro=total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:07:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= (float(input("total de vendas")))
lucro= total_vendas*(0,3)
print(lucro)
-- EXECUTION TIME:
0.13118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    lucro= total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:07:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= (float(input("total de vendas")))
lucro= total_vendas*(0,3)
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro= total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:08:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= (float(input("total de vendas")))
lucro= total_vendas*(0,3)
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    lucro= total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:08:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= (float(input("total de vendas")))
obtencao_de_lucro= total_vendas*(0,3)
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.159582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    obtencao_de_lucro= total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= (float(input("total de vendas"))
obtencao_de_lucro= total_vendas*(0,3)
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.126631
-- ERROR:
  File "/home/codebench/codes/1596/1014/main.py", line 5
    obtencao_de_lucro= total_vendas*(0,3)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:10:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= (float(input("total de vendas"))
obtencao_de_lucro= total_vendas*(0,3)
print(obtencao_de_lucro)
-- ERROR:
File "XXXX", line 5
    obtencao_de_lucro= total_vendas*(0,3)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:10:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= (float(input("total de vendas")))
obtencao_de_lucro= total_vendas*(0,3)
print(obtencao_de_lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    obtencao_de_lucro= total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:10:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= float(input("total de vendas"))
obtencao_de_lucro= total_vendas*(0,3)
print(obtencao_de_lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    obtencao_de_lucro= total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:10:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas= float(input("total de vendas"))
obtencao_de_lucro= total_vendas*(0,3)
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.153682
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    obtencao_de_lucro= total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:11:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(0,3)
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.156229
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    obtencao_de_lucro = total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:17:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(0,3)
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.129075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1014/main.py", line 5, in <module>
    obtencao_de_lucro = total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:17:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas%30
print(obtencao_de_lucro)
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:17:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas%30
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.193118
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
10.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:17:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas%30
print(obtencao_de_lucro)
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:17:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas%30
print(obtencao_de_lucro)
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:18:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas%30
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.205162
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
10.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:18:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas%30
print(obtencao_de_lucro)
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:18:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(0,3)
print(obtencao_de_lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    obtencao_de_lucro = total_vendas*(0,3)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:19:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(30/100)
print(obtencao_de_lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:19:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
total_vendas = float(input("total de vendas"))
obtencao_de_lucro = total_vendas*(30/100)
print(obtencao_de_lucro)
-- EXECUTION TIME:
0.195761
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
